# GiraffeChess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.txt  update_repository.bat  update_repository.sh
.github/workflows/: CI.yml
GiraffeChess/: CMakeLists.txt
engine/: CMakeLists.txt
engine/src/: analyzer.cpp  analyzer.h  board.cpp  board.h  debug.h  eval.cpp  eval.h  logger.h  move.h  notation.cpp  notation.h  perft.cpp  perft.h  piece.h  piecetype.h  uci.cpp  uci.h
src/: analyzer.cpp  analyzer.h  board.cpp  board.h  debug.cpp  debug.h  eval.cpp  eval.h  logger.cpp  main.cpp  move.h  move_patterns.h  notation.cpp  notation.h  perft.cpp  perft.h  piece.h  piecetype.h  uci.cpp  uci.h
test/: CMakeLists.txt  perft_test.cpp  standard.epd
